<resources>
    <string name="app_name">Shopping App</string>
    <string name="createList">Create list</string>
    <string name="create">Create</string>
    <string name="choseList">Choose list</string>
    <string name="createInventory">Create Inventory</string>
    <string name="chooseInventory">Choose inventory</string>
    <string name="sendList">Send</string>
    <string name="product_price">Price</string>
    <string name="product_name">Item name</string>
    <string name="product_aisle">Aisle</string>
    <string name="inventory_name">Inventory name</string>
    <string name="list_name">List name</string>
    <string name="search_item">Search</string>
    <string name="edit_item">Edit</string>
    <string name="add_modify">Add</string>
    <string name="current_total">Current Total:</string>
    <string name="list_total">List Total:</string>
    <string name="current_dollar">$0.00</string>
    <string name="list_dollar">$0.00</string>
    <string name="add_item">Add item</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="refresh">refresh</string>
    <string name="enterNewItem">Enter the new item.</string>
    <string name="editCurrentItem">Edit the following item.</string>
    <string name="backToList">Back to list</string>
</resources>
