<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoppingapp.UseList">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="219dp"
        android:layout_height="44dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/list_name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="62dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onAddProduct"
        android:text="@string/add_item"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--This listView will eventually be attached to a custom
        array in order to provide the UI interface we require
        on our list, including displaying the cost attached,
        displaying a checkbox, and displaying an increment and
        decrement button per each item in the list.-->
    <ListView
        android:id="@+id/listView2"
        android:layout_width="368dp"
        android:layout_height="411dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="141dp"
        android:layout_height="28dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/current_total"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="141dp"
        android:layout_height="28dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/list_total"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="65dp"
        android:layout_height="28dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="4dp"
        android:text="@string/current_dollar"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="65dp"
        android:layout_height="28dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="80dp"
        android:text="@string/list_dollar"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="164dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button14"
        android:layout_width="62dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/refresh"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
